...
    ) {
        // Three-dot menu
        Box(modifier = Modifier.padding(start = 10.dp, end = 10.dp)) {
            IconButton(onClick = { expanded = true }) {
                Icon(
                    painter = painterResource(R.drawable.ic_more_vert),
                    contentDescription = "More options",
                    modifier = Modifier.size(36.dp),
                )
            }

            // Dropdown menu with options
            DropdownMenu(
                expanded = expanded,
                onDismissRequest = { expanded = false }
            ) {
                DropdownMenuItem(
                    text = { Text("Edit") },
                    onClick = { onEditDo(observation) })

                DropdownMenuItem(
                    text = { Text("View") },
                    onClick = { onViewDo(observation) })
            }
...
