...
                        text = "Census #${metadata.censusNumber}",
                        style = MaterialTheme.typography.displaySmall,
                        textAlign = TextAlign.Start
                    )
                } else {
                    Text(
                        text = "Tag / Retag",
                        style = MaterialTheme.typography.displaySmall,
                        textAlign = TextAlign.Start
                    )
                }

                val errorColor = MaterialTheme.colorScheme.error.copy(alpha = 0.9f)
...
            }
        },
        navigationIcon = {
            IconButton(onClick = onNavigationIconClick) {
                Icon(
                    painter = painterResource(R.drawable.ic_menu),
                    contentDescription = "Toggle drawer",
                    modifier = Modifier.size(36.dp),
                )
            }
        },
        colors = TopAppBarDefaults.topAppBarColors(
            containerColor = MaterialTheme.colorScheme.primaryContainer,
...
