...
                        containerColor = Color.LightGray,
                        onClick = { onConfirmation()},
                        icon = { // no icon
                        },
                        text = {
                            Text(
                                "Yes, edit entry",
                                style = MaterialTheme.typography.titleLarge
                            )
                        }
                    )
                }
            }
...
